# tinyexpr

./: .gitignore  README.md  benchmark.c  example2.c  example2off.c  example3.c  test.c  tinyexpr.c  tinyexpr.h
cmake/: CMakeLists.txt
cpp/: tinyexpr.cpp  tinyexpr.h
